attempt at fixing about me page margins on mobile

--- a/src/css/AboutMePage.css
+++ b/src/css/AboutMePage.css
@@ -1,53 +1,53 @@
 .expWrapper {
-    display: grid;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: auto;
-    margin: -20px 0px;
-    color: rgb(68, 121, 208);
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: auto;
+  margin: -20px 0px;
+  color: rgb(68, 121, 208);
 }
 
 .leftTitle {
-    text-align: left;
+  text-align: left;
 }
 
 .rightTitle {
-    text-align: right;
+  text-align: right;
 }
 
-
 .aboutMeWrapper {
-    display: grid;
-    grid-template-columns: minmax(20px, 25vw) auto minmax(20px, 25vw);
-    grid-auto-rows: 1fr;
-    /* align-self: center; */
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-    justify-content: center;
-    min-width: 90vw;
-    min-height: 100vh;
-    overflow: hidden;
+  display: grid;
+  grid-template-columns: minmax(20px, 25vw) auto minmax(20px, 25vw);
+  grid-auto-rows: 1fr;
+  /* align-self: center; */
+  grid-column: 1 / 4;
+  grid-row: 1 / 4;
+  justify-content: center;
+  min-width: 90vw;
+  min-height: 100vh;
+  overflow: hidden;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .aboutMeContent {
-    grid-row: auto;
-    grid-column: 2 / 2;
-    color: rgb(54, 103, 182);
-    text-wrap: pretty;
-    font-size: 1.5em;
-    align-self: center;
-    text-align: left;
+  grid-row: auto;
+  grid-column: 2 / 2;
+  color: rgb(54, 103, 182);
+  text-wrap: pretty;
+  font-size: 1.5em;
+  align-self: center;
+  text-align: left;
 }
 
 .aboutHeader {
-    display: grid;
-    grid-column: 2 / 2;
-    grid-row: 2 / 2;
-    color: rgb(54, 103, 182);
-    text-wrap: pretty;
+  display: grid;
+  grid-column: 2 / 2;
+  grid-row: 2 / 2;
+  color: rgb(54, 103, 182);
+  text-wrap: pretty;
 }
 
-
 .portraitImg {
-    border-radius: 50%;
-    justify-self: center;
+  border-radius: 50%;
+  justify-self: center;
 }
